각종오류수정(게시판단건조회, 작성, 수정 오류 수정)